cmake_minimum_required(VERSION 3.22)
project(Parcial_ListaEnlazada_Andres_Sanabria)

set(CMAKE_CXX_STANDARD 17)

add_executable(Parcial_ListaEnlazada_Andres_Sanabria main.cpp Nodo.h ListaEnlazada.cpp ListaEnlazada.h Pedidos.cpp Pedidos.h Producto.cpp Producto.h Cliente.cpp Cliente.h Tienda.cpp Tienda.h)
